src/index.less
/* ... */
.lang-tlml {


  .correct {
    background-image: url("./images/tlml/correct.png");
  }


  .down {
    background-image: url("./images/tlml/down.png");
  }

  .up {
    background-image: url("./images/tlml/up.png");
  }

  .wrong {
    background-image: url("./images/tlml/wrong.png");
  }

  .wrongpos {
    background-image: url("./images/tlml/wrongpos.png");
  }
}

.share-icon {
  color: #b4b9c2;
  display: inline-block;
  margin-right: 6px;
}

.pwa-tips {
  position: fixed;
  bottom: 0;
  width: 100%;
  background: #000;
  padding: 20px;

  .close {
    border: 1px solid #fff;
    padding: 0 4px;
    cursor: pointer;
  }
}

.tipList {
  margin: 0 auto;
  padding: 0;
  max-width: 500px;

  li {
    line-height: 20px;
    display: flex;
    align-items: center;
    list-style: none;
    text-align: left;

    .emoji {
      float: left;
      width: 35px;
      height: 35px;
      margin: 0 10px;
      flex: 0 0 35px;
    }
  }
}

#server-menu-btn {
  float: right;
  padding: 0;
  width: 48px;
  height: 48px;
  min-width: unset;
}

#server-chip {
  position: absolute;
  padding: 0 5px 0.5px 5px;
  right: 2px;
  transform: scale(.8);
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
  display: -webkit-inline-box;
  display: -ms-inline-flexbox;
  display: inline-flex;
  max-width: 100%;
  outline: none;
  overflow: hidden;
  text-decoration: none;
  vertical-align: middle;
  white-space: nowrap;
  border-radius: 8px;
  font-size: 12px;
  height: 16px;
  background-color: #1976d2 !important; /* improved contrast */
}

#server-menu {
  width: 100px;
}

.flex-center {
  display: flex;
  justify-content: center;
  align-items: center;
}

.user-list {

  text-align: left;
  display: flex;
  flex-wrap: wrap;

  .title-item {
    flex-basis: 100%;
    padding-left: 56px;

    .title-icon {
      position: absolute;
      left: 12px;
      top: 50%;
      transform: translateY(-50%)
    }
  }

  .user-item {
    flex: 1;
    min-width: 200px;
    padding: 0 8px;
  }

  .user-tip {
    position: absolute;
    top: 2px;
    right: 2px;
    font-size: 12px;
    text-transform: uppercase;
    transform: scale(.9);
    opacity: .5;
  }
}

.close-icon {
  position: absolute;
  right: 0;
  top: 0;

  .mdui-icon {
    padding: 24px 24px 20px 24px;
  }
}

.close-icon+.mdui-dialog-title {
  padding-right: 52px;
}

.mdui-dialog-title+.mdui-dialog-content {
  padding-top: 0;
}

.mdui-theme-layout-dark .mdui-dialog-content {
  color: #fff;
}

.mdui-panel-item-open {
  margin: 0;
}

.mdui-panel-item-open {
  .panel-dync-icon {
    transform: rotate(180deg);
  }
}

